PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/ContainerExistsIndexAccess.pf
module ContainerExistsIndexAccess {

    fun testSomething() : Int {

        i Int = a[2]
         
        return i
    }
}